# wallet-dzen

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 2025_08_25_0029-6e2dd4a47efa_init_models.py  2025_08_25_2222-2efdf6e3fe59_accounts_unique_together_for_name_and_.py  2025_08_26_2111-4a296b8280c1_category_unique_together_for_name_user_.py  2025_08_27_1703-ac2a6b0459b6_trancsactions_occurred_at_fix.py
app/api/v1/: auth_depends.py  depends.py
app/api/v1/routers/: account.py  auth.py  budget.py  category.py  trancsaction.py  user.py
app/api/v1/schemas/: account.py  budget.py  category.py  transaction.py  user.py
app/core/: config.py  error_handler.py  security.py
app/core/models/: __init__.py  account.py  budget.py  category.py  mixins.py  transaction.py  transfer.py  user.py
app/db/: __init__.py  base.py  db_helper.py  types.py
app/db/repositories/: __init__.py  account_repo.py  budget.py  category_repo.py  transaction_repo.py  user_repo.py
app/utils/: cursor.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py
